[package]
name = "audio-time"
version = "0.0.1-alpha.2"
edition = "2021"
authors = ["Yotam Ofek <yotam.ofek@gmail.com>"]
license = "MIT"
repository = "https://github.com/yotamofek/audio-time"
description = "Encode and convert audio time spans between representations in number of samples, number of bytes and time duration."

[dependencies]
audio-core = "0.2.0-alpha"
derive_more = "0.99"
thiserror = "1"
serde = { version = "1", features = ["derive"], optional = true }
nonzero-const-param = { git = "https://github.com/yotamofek/nonzero-const-param", branch = "main", features = ["serde"] }
